// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompanyDetails displays error state 1`] = `
<p>
  Error: Failed to fetch offices
</p>
`;

exports[`CompanyDetails displays loading state 1`] = `
<p>
  Loading...
</p>
`;

exports[`CompanyDetails navigates to correct page when menu item is clicked 1`] = `
<nav>
  <ul>
    <li>
      About
    </li>
    <li>
      Blog
    </li>
    <li>
      Company
    </li>
    <li>
      Careers
    </li>
    <li>
      Press
    </li>
  </ul>
</nav>
`;

exports[`CompanyDetails renders CompanyDetails correctly 1`] = `
<h1>
  Expanding learning opportunities
</h1>
<nav>
  <ul>
    <li>
      About
    </li>
    <li>
      Blog
    </li>
    <li>
      Company
    </li>
    <li>
      Careers
    </li>
    <li>
      Press
    </li>
  </ul>
</nav>
<section>
  <h2>
    Our Origins
  </h2>
  <p>
    Cursus was founded in 2020
  </p>
</section>
<section>
  <h2>
    Our Offices
  </h2>
  <div>
    <img
      src="https://example.com/image1.jpg"
      alt="Country A"
    />
    <p>
      Country A
    </p>
    <p>
      Address A
    </p>
    <p>
      123-456-789
    </p>
  </div>
  <div>
    <img
      src="https://example.com/image2.jpg"
      alt="Country B"
    />
    <p>
      Country B
    </p>
    <p>
      Address B
    </p>
    <p>
      987-654-321
    </p>
  </div>
</section>
`;
